// Copyright 2018-2021 Cargill Incorporated
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// The component message envelope.  All message sent to local components will
// be wrapped in one of these.
message ComponentMessage {
    // The type of component message
    ComponentMessageType message_type = 1;

    // The envelope contents.
    bytes payload = 2;
}

enum ComponentMessageType  {
    UNSET_COMPONENT_MESSAGE_TYPE = 0;
    // Mimics the NETWORK_HEARTBEAT
    COMPONENT_HEARTBEAT = 2;

    SERVICE = 100;
}

// This message is used to keep connections alive
message ComponentHeartbeat {}
